--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,11 +1,8 @@
 <!-- templates/home.html -->
-
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Django + Coinbase Charge</title>
+    <title>Django + Coinbase Pay</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
   </head>
