--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Django + Coinbase Charge</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <title>Purchase</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container mt-5">
-      <p>Your payment has been successful.</p>
+    <div class="box"> 
+      <div class="success alert">
+        <div class="alert-body">
+          Success!
+          Your payment has been successful
+          <a href="/">Continue Shopping</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
