added: new css for payment error and static imgs

--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -9,8 +9,7 @@
     <div class="box"> 
       <div class="success alert">
         <div class="alert-body">
-          Success!
-          Your payment has been successful
+          <p>Your payment has been successful</p>
           <a href="/">Continue Shopping</a>
         </div>
       </div>
