--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -3,7 +3,7 @@
   <head>
     <title>Purchase</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}" crossorigin="anonymous">
   </head>
   <body>
     <div class="box"> 
