fix: html for live page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,8 @@
       <div class="card w-25">
         <div class="card-body">
           <h3 class="card-title">{{ charge.name }}</h3>
-          <img src="{% static '/img/whiskey_1.jpeg' %}" alt="the finest" width="250" height="200">
+          <!-- <img src="{% static '/img/whiskey_1.jpeg' %}" alt="the finest" width="250" height="200"> -->
+          <img src='/static/img/whiskey_1.jpeg' alt="the finest" width="250" height="200">
           <p class="card-text">
             <span>{{ charge.description }}</span>
             <br>
