new ref for static

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
   <head>
     <title>Django + Coinbase Pay</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container mt-5">
@@ -11,7 +11,7 @@
         <div class="card-body">
           <h3 class="card-title">{{ charge.name }}</h3>
           <!-- <img src="{% static '/img/whiskey_1.jpeg' %}" alt="the finest" width="250" height="200"> -->
-          <img src='/static/img/whiskey_1.jpeg' alt="the finest" width="250" height="200">
+          <img src='../static/img/whiskey_1.jpeg' alt="the finest" width="250" height="200">
           <p class="card-text">
             <span>{{ charge.description }}</span>
             <br>
