--- a/app/templates/cancel.html
+++ b/app/templates/cancel.html
@@ -4,7 +4,7 @@
     <title>Cancel</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}" crossorigin="anonymous"> -->
-    <link rel="stylesheet" type="text/css" href='../static/css/base.css'>
+    <link rel="stylesheet" type="text/css" href='/static/css/base.css'>
   </head>
   <body>
     <div class="box"> 
