--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -3,8 +3,8 @@
   <head>
     <title>Purchase</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" type="text/css" href='/css/base.css'> -->
+    <!-- <link rel="stylesheet" type="text/html" href="{% static 'css/base.css' %}" crossorigin="anonymous"> -->
+    <link rel="stylesheet" type="text/css" href='../static/css/base.css'>
   </head>
   <body>
     <div class="box"> 
