--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html lang="en">
   <head>
-    <title>Purchase</title>
+    <title>E-Crypto: Purchase</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/html" href="{% static 'css/base.css' %}" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href='../static/css/base.css'>
