--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,10 +4,19 @@
     <title>E-Crypto: Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P3H23JBMPZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P3H23JBMPZ');
+    </script>
   </head>
   <base href="/">
   <body>
-
     <div class="container mt-5">
       <div class="card" style="width: 18rem;">
         <div class="card-body">
@@ -24,6 +33,5 @@
         </div>
       </div>
     </div>
-
   </body>
 </html>
