--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -5,6 +5,15 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/html" href="{% static 'css/base.css' %}" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href='../static/css/base.css'>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P3H23JBMPZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P3H23JBMPZ');
+    </script>
   </head>
   <body>
     <div class="box"> 
