--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -14,6 +14,29 @@
 
       gtag('config', 'G-P3H23JBMPZ');
     </script>
+
+    <!-- cookie-consent-banner -->
+    <script src="https://cdn.websitepolicies.io/lib/cookieconsent/1.0.3/cookieconsent.min.js" defer></script>
+    <script>
+      window.addEventListener("load",function(){
+        window.wpcc.init({
+          "border":"thin",
+          "corners":"small",
+          "colors":{
+            "popup":{
+              "background":"#f6f6f6",
+              "text":"#000000",
+              "border":"#555555"
+            },"button":{
+              "background":"#555555",
+              "text":"#ffffff"
+            }
+          },
+          "position":"top-right"
+        })
+      });
+    </script>
+    
   </head>
   <body>
     <div class="box"> 
