--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,18 +21,22 @@
       window.addEventListener("load",function(){
         window.wpcc.init({
           "border":"thin",
-          "corners":"small",
+          "corners":"normal",
           "colors":{
             "popup":{
-              "background":"#f6f6f6",
+              "background":"#cff5ff",
               "text":"#000000",
-              "border":"#555555"
-            },"button":{
-              "background":"#555555",
+              "border":"#5e99c2"
+            },
+            "button":{
+              "background":"#5e99c2",
               "text":"#ffffff"
             }
           },
-          "position":"top-right"
+          "position":"bottom",
+          "content":{
+            "href":"https://www.websitepolicies.com/policies/view/AsI78Q0l"
+          }
         })
       });
     </script>
